package ingredient;

public interface Ingredient {
    double getPrice();
    double getWeight();
}
