package ingredient;

public abstract class Sauce implements Ingredient {
}
