@startuml

title __INGREDIENT's Class Diagram__\n

  namespace ingredient {
    class ingredient.Cheddar {
        {static} - BASE_PRICE : double
        - weight : double
        + Cheddar()
        + getPrice()
        + getWeight()
    }
  }
  

  namespace ingredient {
    class ingredient.DeepFriedOnions {
        {static} - BASE_PRICE : double
        - weight : double
        + DeepFriedOnions()
        + getPrice()
        + getWeight()
    }
  }
  

  namespace ingredient {
    interface ingredient.Ingredient {
        {abstract} + getPrice()
        {abstract} + getWeight()
    }
  }
  

  namespace ingredient {
    class ingredient.IngredientFactory {
        + getIngredient()
    }
  }
  

  namespace ingredient {
    abstract class ingredient.Meat {
    }
  }
  

  namespace ingredient {
    class ingredient.MeatBeef {
        {static} - BASE_PRICE : double
        - weight : double
        + MeatBeef()
        + getPrice()
        + getWeight()
    }
  }
  

  namespace ingredient {
    class ingredient.MeatWhitefish {
        {static} - BASE_PRICE : double
        - weight : double
        + MeatWhitefish()
        + getPrice()
        + getWeight()
    }
  }
  

  namespace ingredient {
    abstract class ingredient.Sauce {
    }
  }
  

  namespace ingredient {
    class ingredient.SauceBarbecue {
        {static} - BASE_PRICE : double
        - weight : double
        + SauceBarbecue()
        + getPrice()
        + getWeight()
    }
  }
  

  namespace ingredient {
    class ingredient.SauceBurger {
        {static} - BASE_PRICE : double
        - weight : double
        + SauceBurger()
        + getPrice()
        + getWeight()
    }
  }
  

  namespace ingredient {
    class ingredient.Tomato {
        {static} - BASE_PRICE : double
        - weight : double
        + Tomato()
        + getPrice()
        + getWeight()
    }
  }
  

  ingredient.Cheddar .up.|> ingredient.Ingredient
  ingredient.DeepFriedOnions .up.|> ingredient.Ingredient
  ingredient.Meat .up.|> ingredient.Ingredient
  ingredient.MeatBeef -up-|> ingredient.Meat
  ingredient.MeatWhitefish -up-|> ingredient.Meat
  ingredient.Sauce .up.|> ingredient.Ingredient
  ingredient.SauceBarbecue -up-|> ingredient.Sauce
  ingredient.SauceBurger -up-|> ingredient.Sauce
  ingredient.Tomato .up.|> ingredient.Ingredient


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
